# brevitas-utils

./: .gitignore  LICENSE  README.md  pyproject.toml
brevitas_utils/: __init__.py  bias_correction.py  brevitas_class_mapping.py  calibration.py  conversion.py  convert_to_qmodules.py  creation.py  export.py  fixes.py  layer_editing_utils.py  quant_activation.py  typing.py
brevitas_utils/custom_clamps/: ignore_overflow_clamp.py
brevitas_utils/custom_quantizers/: Int8WeightPerTensorPowerOfTwo.py  int4_weight_per_tensor_pot.py  int8_weight_per_tensor_pot.py  pot4_weight_per_tensor_fixed_point.py
tests/: test_overflow_clamp.py  test_potquant.py
